src/assets/tailwind.css
@import url("https://rsms.me/inter/inter.css");
html {
  font-family: "Inter", sans-serif;
}
@supports (font-variation-settings: normal) {
  html {
    font-family: "Inter var", sans-serif;
  }
}

@tailwind base;

@tailwind components;

@tailwind utilities;

@layer utilities {
  @variants responsive {
    .auto-cols-30 {
      grid-auto-columns: 30%;
    }
    .auto-cols-60 {
      grid-auto-columns: 60%;
    }
    .auto-cols-88 {
      grid-auto-columns: 88%;
    }
  }
}

html {
  font-family: "Inter", sans-serif;
  scroll-behavior: smooth;
}

html,
body,
div#app {
  @apply h-full;
}

nav > ul > li {
  @apply my-2;
}
nav > ul > li > a {
  @apply mx-5 py-2 text-xl font-semibold text-gray-800 border-b-2 border-transparent;
}
@screen md {
  nav > ul > li {
    @apply my-0;
  }
  nav > ul > li > a {
    @apply text-base;
  }
}
nav > ul > li > a:hover {
  @apply text-teal-500 border-teal-100;
}
nav > ul > li > a.router-link-active {
  @apply text-teal-500 border-teal-500;
}

section {
  @apply py-16;
}

hr {
  @apply w-full;
}

.footer\:links {
  @apply py-4 md:py-0 px-0 md:pr-20 text-center md:text-left;
}
.footer\:links > p {
  @apply text-gray-500;
}
.footer\:links > ul {
  @apply mt-2;
}
.footer\:links > ul > li > a:hover {
  @apply text-gray-500;
}

